Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17179

designer crashes when replacing a widget with another with the same name

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.7.4
    • 4.7.1
    • Tools: Designer
    • None
    • dd7873cd7e02e42b384709f33a34f69bc06fb25d

    Description

      To reproduce:

      • open in designer attached file (it has one line edit named "test")
      • delete the line edit "test"
      • add to form a QTreeWidget (or QPushButton etc.)
      • in ObjectInspector window rename the new QTreeWidget to "test" (i.e. the previous name of the old QLineEdit !!!)
      • open signal-slot editor (menu View -> Signal/Slot Editor)
      • click on "+" to add a new connection
      • as sender choose "test" (the newly added QTreeWidget)
      • double-click on "<signal>" in the signal column
        => crash

      In the terminal from which I run designer I get only "Segmentation fault".

      Backtrace from gdb says (sorry - not everything built with debug symbols):

      Program received signal SIGSEGV, Segmentation fault.
      0x00007fa72aee0590 in qdesigner_internal::MetaDataBaseItem::fakeSignals() const ()
         from /home/development/64-bit/qt-4.7.1/install/lib/libQtDesigner.so.4
      (gdb) bt
      #0 0x00007fa72aee0590 in qdesigner_internal::MetaDataBaseItem::fakeSignals() const ()
         from /home/development/64-bit/qt-4.7.1/install/lib/libQtDesigner.so.4
      #1  0x00007fa72b5dadb3 in ?? () from /home/development/64-bit/qt-4.7.1/install/lib/libQtDesignerComponents.so.4
      #2  0x00007fa72b5e7192 in ?? () from /home/development/64-bit/qt-4.7.1/install/lib/libQtDesignerComponents.so.4
      #3  0x00007fa729f3eb49 in ?? () from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #4  0x00007fa729f43e9a in ?? () from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #5  0x00007fa729f4456a in QAbstractItemView::edit(QModelIndex const&, QAbstractItemView::EditTrigger, QEvent*) ()
         from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #6  0x00007fa729f89902 in QTreeView::mouseDoubleClickEvent(QMouseEvent*) ()
         from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #7  0x00007fa729a39b3c in QWidget::event(QEvent*) () from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #8  0x00007fa729e0ecab in QFrame::event(QEvent*) () from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #9  0x00007fa729f4747d in QAbstractItemView::viewportEvent(QEvent*) () from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #10 0x00007fa729f85aab in QTreeView::viewportEvent(QEvent*) () from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #11 0x00007fa729166788 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) ()
         from /home/development/64-bit/qt-4.7.1/install/lib/libQtCore.so.4
      #12 0x00007fa7299e09bc in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
         from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #13 0x00007fa7299ebfbc in QApplication::notify(QObject*, QEvent*) () from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #14 0x00007fa729166f7c in QCoreApplication::notifyInternal(QObject*, QEvent*) ()
         from /home/development/64-bit/qt-4.7.1/install/lib/libQtCore.so.4
      #15 0x00007fa7299e7713 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #16 0x00007fa729a6dbd0 in ?? () from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #17 0x00007fa729a6c798 in QApplication::x11ProcessEvent(_XEvent*) () from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #18 0x00007fa729a97b3a in ?? () from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #19 0x00007fa7279ca0fb in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
      #20 0x00007fa7279cd8cd in ?? () from /usr/lib64/libglib-2.0.so.0
      #21 0x00007fa7279cda8b in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
      #22 0x00007fa72919439c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
         from /home/development/64-bit/qt-4.7.1/install/lib/libQtCore.so.4
      #23 0x00007fa729a9743f in ?? () from /home/development/64-bit/qt-4.7.1/install/lib/libQtGui.so.4
      #24 0x00007fa729165c32 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
         from /home/development/64-bit/qt-4.7.1/install/lib/libQtCore.so.4
      #25 0x00007fa72916601c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
         from /home/development/64-bit/qt-4.7.1/install/lib/libQtCore.so.4
      #26 0x00007fa729169f24 in QCoreApplication::exec() () from /home/development/64-bit/qt-4.7.1/install/lib/libQtCore.so.4
      #27 0x000000000042f0ab in ?? ()
      #28 0x00007fa728081586 in __libc_start_main () from /lib64/libc.so.6
      #29 0x0000000000418649 in ?? ()
      #30 0x00007fff7474ffa8 in ?? ()
      #31 0x000000000000001c in ?? ()
      #32 0x0000000000000003 in ?? ()
      #33 0x00007fff74752028 in ?? ()
      #34 0x00007fff74752031 in ?? ()
      #35 0x00007fff74752053 in ?? ()
      #36 0x0000000000000000 in ?? ()
      (gdb)
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            wiecko Marek Wieckowski
            Votes:
            2 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes