Designer: Slots of main container not visible in signal/slot editor.

Fix a regression introduced by dd7873cd7e02e42b384709f33a34f69bc06fb25d
of QTBUG-17179.

Reviewed-by: Kai Koehne <kai.koehne@nokia.com>
Task-number: QTBUG-17358